welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:2: error: class Array takes type parameters
  var nums:Array
           ^golomb:2: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
  var nums:Array
      ^golomb:2: error: class Array takes type parameters
  var nums:Array
           ^golomb:2: error: local variables must be initialized
  var nums:Array
      ^golomb:3: error: type mismatch;
 found   : Unit
 required: Int
  for (i <- 1 to num) {
         ^